# learning

./: README.md
Flutter/Amazon_Clone/backend/: .env  Cargo.toml
Flutter/Amazon_Clone/backend/src/: app_state.rs  lib.rs  logger.rs  main.rs  router.rs
Flutter/Amazon_Clone/backend/src/handlers/: login.rs  register.rs
Flutter/Amazon_Clone/backend/src/queries/: user.rs
Flutter/Amazon_Clone/backend/src/utilities/: mod.rs  payload.rs
Flutter/Amazon_Clone/backend/src/utilities/auth/: hash.rs  jwt.rs
Flutter/Amazon_Clone/database/: docker-compose.yml  flyway.conf
Flutter/Amazon_Clone/database/queries/: V1__creating_User_table.sql
Flutter/Amazon_Clone/mobile_app/lib/: main.dart  router.dart
Flutter/udemy_store_project/backend/: Cargo.toml
Flutter/udemy_store_project/database/: docker-compose.yml  flyway.conf
Flutter/udemy_store_project/mobile_app/: README.md  pubspec.yaml
Flutter/udemy_store_project/mobile_app/android/app/: build.gradle
Flutter/udemy_store_project/mobile_app/ios/Runner/: Info.plist
Flutter/udemy_store_project/mobile_app/ios/Runner.xcodeproj/: project.pbxproj
Flutter/udemy_store_project/mobile_app/lib/: main.dart
Flutter/udemy_store_project/mobile_app/linux/: CMakeLists.txt  my_application.cc
Flutter/udemy_store_project/mobile_app/macos/Runner.xcodeproj/: project.pbxproj
Flutter/udemy_store_project/mobile_app/test/: widget_test.dart
Flutter/udemy_store_project/mobile_app/web/: index.html  manifest.json
Flutter/udemy_store_project/mobile_app/windows/: CMakeLists.txt
Flutter/udemy_store_project/mobile_app/windows/runner/: Runner.rc  main.cpp
NEXTJobs/: package-lock.json
NEXTJobs/backend/: Cargo.toml  TODO.md  rustfmt.toml
NEXTJobs/backend/sql/: init.sql
NEXTJobs/backend/src/: app_state.rs  main.rs  router.rs
NEXTJobs/backend/src/handlers/auth/: email_verification.rs  login.rs  refresh_token.rs  register.rs
NEXTJobs/backend/src/queries/: email_verification_codes.rs  tokens.rs  users.rs
NEXTJobs/backend/src/utilities/: payload.rs
NEXTJobs/backend/src/utilities/auth/: jwt.rs
NEXTJobs/frontend/: package-lock.json  package.json
NEXTJobs/frontend/src/app/: layout.tsx  page.tsx
Rust_Atomics_and_Locks_book/chapter1/src/: main.rs
htmx/first_try/: Cargo.toml
htmx/first_try/src/: handlers.rs  lib.rs  main.rs  router.rs
htmx/first_try/templates/: test_template.html
jobs/backend/: .env-example  .gitignore  docker-compose.yml  rustfmt.toml
jobs/backend/src/: router.rs
jobs/backend/src/middleware/: require_auth.rs
jobs/backend/src/queries/: mod.rs  users.rs
jobs/backend/src/utilities/: email.rs  mod.rs
rust_atomics_and_locks/chapter1/src/: main.rs
udemy-jobs-course/backend/src/: lib.rs
udemy-jobs-course/backend/src/queries/: tokens.rs
udemy-jobs-course/backend/src/utilities/: payload.rs
udemy-jobs-course/frontend/src/app/: page.tsx
(+32 files in other folders)
