[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.2", features = ["postgres", "macros", "runtime-tokio-native-tls", "time", "chrono"] }

axum = { version = "0.6.1", features = ["macros", "headers"] }
axum-macros = "0.3.8"
bcrypt = "0.13.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
jsonwebtoken = "8.2.0"
lettre = "0.10.4"
maud = "0.25.0"
rand = "0.8.5"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_with = "2.1.0"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.4", features = ["cors"] }
validator = { version = "0.16.0", features = ["derive"] }
regex = "1.10.2"
