[package]
name = "first_try"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = {version = "0.12.1", features = ["with-axum"]}
axum = { version = "0.6.1", features = ["macros", "headers"] }
axum-macros = "0.3.8"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.4", features = ["cors", "fs"] }

serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
askama_axum = "0.3.0"
