[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7.4", features = ["macros", "multipart"] }
axum-macros = "0.4.1"
tower-http = { version = "0.5.1", features = ["cors", "fs"] }
sqlx = { version = "0.7.3", features = ["postgres", "macros", "runtime-tokio-native-tls", "time", "chrono"] }
chrono = { version = "0.4.19", features = ["serde"] }

dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"

simplelog = "0.11.1"
bcrypt = "0.15.0"
log = "0.4.14"
rand = "0.8.4"
