[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros", "headers", "multipart"] }
axum-macros = "0.3.8"
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
sqlx = { version = "0.7.2", features = ["postgres", "macros", "runtime-tokio-native-tls", "time", "chrono"] }
